--- a/src/main/webapp/statics/css/website/decoratedplugin.css
+++ b/src/main/webapp/statics/css/website/decoratedplugin.css
@@ -25,7 +25,7 @@
 			padding: 0;
 			margin-top: 1px;
 			margin-left: -1px;
-			background: url(/website/images/system/ds-edit.gif?5) no-repeat 0 0;
+			background: url(/statics/images/website/ds-edit.gif?5) no-repeat 0 0;
 			height: 21px;
 			vertical-align: top;
 			text-decoration: none;
@@ -104,13 +104,13 @@
 }
 #sdkbar .sdk-page-nav li.page-dropdown {
 	margin-left:10px;
-	background: url(../images/nav-arrow-down.png) no-repeat center right;
+	background: url(/statics/images/website/nav-arrow-down.png) no-repeat center right;
 	background-position: 70px;
 	background-color:#505358;
 	width:93px;
 }
 #sdkbar .sdk-page-nav li.page-moon {
-	background: url(../images/nav-arrow-up.png) no-repeat center right;
+	background: url(/statics/images/website/nav-arrow-up.png) no-repeat center right;
 	background-position: 70px;
 	background-color:#505358;
 }
@@ -148,7 +148,7 @@
 }
 
 /*
-#sdkbar, #sdkbar .sdk-confirm li.preview1 a, #sdkbar .sdk-confirm li.release1 a, #sdkbar .sdk-confirm li.save1 a { background-image: url(/website/images/system/sdkbar.gif); background-repeat: no-repeat }
+#sdkbar, #sdkbar .sdk-confirm li.preview1 a, #sdkbar .sdk-confirm li.release1 a, #sdkbar .sdk-confirm li.save1 a { background-image: url(/statics/images/website/sdkbar.gif); background-repeat: no-repeat }
 */
 
 #sdkbar { position: fixed; _position: fixed; z-index: 11001; top: 0; _top: expression(documentElement.scrollTop);
@@ -161,11 +161,11 @@ left: 0; width: 100%; height: 46px; background-color: #2c2c2c; zoom: 1; -moz-box
 #sdkbar .sdk-confirm { float: right; _display: inline; list-style:none; }
 #sdkbar .sdk-confirm li { display: inline-block; *display:inline;*zoom:1;vertical-align: top; margin: 0 10px 0 0;  }
 #sdkbar .sdk-confirm li a {  padding: 0 10px 0 34px; color:#fff; border-radius:2px; }
-#sdkbar .sdk-confirm li.preview1 a { background: url(../images/nav-preview.png) no-repeat 10px center; background-color:#666; margin:7px 0 0 0;  }
+#sdkbar .sdk-confirm li.preview1 a { background: url(/statics/images/website/nav-preview.png) no-repeat 10px center; background-color:#666; margin:7px 0 0 0;  }
 #sdkbar .sdk-confirm li.preview1 a:hover { background-color:#505358; zoom: 1; color:#fff; }
-#sdkbar .sdk-confirm li.save1 a { background: url(../images/nav-save.png) no-repeat 10px center; background-color:#50a532; margin:7px 0 0 0; }
+#sdkbar .sdk-confirm li.save1 a { background: url(/statics/images/website/nav-save.png) no-repeat 10px center; background-color:#50a532; margin:7px 0 0 0; }
 #sdkbar .sdk-confirm li.save1 a:hover { background-color:#2f821a; zoom: 1; color:#fff; }
-#sdkbar .sdk-confirm li.release1 a { background: url(../images/nav-release.png) no-repeat 10px center; background-color:#2496d2; margin:7px 0 0 0; }
+#sdkbar .sdk-confirm li.release1 a { background: url(/statics/images/website/nav-release.png) no-repeat 10px center; background-color:#2496d2; margin:7px 0 0 0; }
 #sdkbar .sdk-confirm li.release1 a:hover { background-color:#1171dc; zoom: 1; color:#fff; }
 
 
