--- a/src/main/webapp/statics/css/appeditor/css.css
+++ b/src/main/webapp/statics/css/appeditor/css.css
@@ -4056,6 +4056,7 @@ add by zhanglang
   line-height: 39px;
   white-space: normal;
   word-break: keep-all;
+  padding-left: 10px;
   width: 788px;
 }
 
