--- a/src/main/webapp/statics/css/appeditor/exp/index.css
+++ b/src/main/webapp/statics/css/appeditor/exp/index.css
@@ -1,6 +1,6 @@
-
 .container{
-	width:1000px;
+	/*width:1000px;*/
+	width:100%;
 	margin:0 auto;
 	background:#fff;
 }
@@ -23,6 +23,9 @@
 }
 .top-pagebtn a, .top-pagebtn a:hover, .top-pagebtn a:visited{
 	color:#fff;
+}
+h1{
+	font-size: 22px;
 }
 /*下拉页码开始*/
 
@@ -55,7 +58,6 @@
 	background:#fa9e1e;
 	display:none;
 	z-index: 333;
-	font-size:14px;
 	width:82px;
 	overflow:hidden;
 }
@@ -82,15 +84,22 @@
 	padding:0 20px;
 }
 .listcon{
-	//margin-bottom:25px;
+	margin-bottom:0px;
 }
 .question{
-	font-size:16px;
 	line-height:22px;
+	clear: left;
+	color: #8c8c8c;
+	font-weight: bold;
+	height: auto;
+	text-align: left;
+	padding-top:10px;
+}
+.checkbox_radio{
+	margin:10px 0 5px 25px;
 }
 .answer{
-	margin:15px 0;
-	color:#555;
+	margin:10px 0;
 }
 .answer ul{
 }
@@ -102,16 +111,13 @@
 	border: 0;
 	border-bottom: solid 1px #555555;
 	vertical-align:bottom;
-	font-size:14px;
 	color:#555;
 }
 .textcon{
-	width:940px;
 	padding:10px;
 	line-height:24px;
 	border:1px solid #dcdcdc;
-	font-size:14px;
-	color:#555;
+	color:#333;
 }
 .onechoose{
   border: solid #ddd;
@@ -128,7 +134,6 @@
 .dropbox-con{
 	width:420px;
 	padding:10px;
-	font-size:14px;
 	border:1px solid #dcdcdc;
 }
 .dropbox-con option{
@@ -181,18 +186,14 @@
 .content_info_autoheight{
 	clear: both;
 	color: #9f9f9f;
-	font-size: 16px;
 	height: 39px;
 	line-height: 39px;
-	padding-bottom: 14px;
-	white-space: nowrap;
-	width: 788px;
+	white-space: normal;
 }
 .connent_info_left{
 	clear: left;
 	color: #8c8c8c;
 	float: left;
-	font-size: 16px;
 	font-weight: bold;
 	height: auto;
 	line-height: 39px;
@@ -200,23 +201,31 @@
 }
 .content_info_right{
 	clear: right;
-	color: #9f9f9f;
+	color: #333;
 	float: left;
-	font-size: 16px;
-	height: 39px;
-	line-height: 39px;
-	margin-left:10px;
+	margin-left:23px;
 	text-align: left;
 }
 .padding_div{
 	background-color: #fff;
 	clear: both;
-	height: 4px;
+	height: 5px;
 	width: 100%;
+	margin-bottom: 5px;
 }
 .content_para{
 	background-color:#f2f2f2;
 }
 .content_para .listcon{
-	padding-left: 15px;
+	padding-left: 20px;
+}
+.tab{
+	font-size: 18px;
+	height: 40px;
+	line-height:40px;
+	font-weight: bold;
+	background-color: #fff;
+	padding-left: 5px;
+	margin:20px 0 10px 0;
+	border-bottom: 1px solid #000;
 }
