--- a/src/main/webapp/statics/css/appeditor/exp/public.css
+++ b/src/main/webapp/statics/css/appeditor/exp/public.css
@@ -1,7 +1,5 @@
-
-
 body {
-      font:normal 100% Arial, Helvetica, sans-serif, '宋体',;
+      font-family: Arial, Helvetica, sans-serif, '宋体';
 	  font-size:14px;
 	  color:#333;
 	  margin:0 auto;
@@ -40,6 +38,7 @@ a,a:hover,a:visited,a:link {
 	color:#666;
 }
 .fontblue-blod{
+	margin-right:5px;
 	color:#2194e6;
 	font-weight:bold;
 }
