--- a/src/main/webapp/statics/css/website/onTrial.css
+++ b/src/main/webapp/statics/css/website/onTrial.css
@@ -55,7 +55,7 @@ a.bw:link,a.bw:visited{color:#fff;background-color:inherit;text-decoration:none}
 a.blue:hover{color:#0070c6;background-color:inherit}
 a.ora:link,a.ora:visited{color:#ff7e0b;background-color:inherit;text-decoration:none}
 a.ora:hover{color:#555;background-color:inherit}
-.top{height:110px;width:100%;background-color:#0070c6;background-repeat:no-repeat;background-position:center}
+.top{height:110px;width:100%;background-color:#3f98CD;background-repeat:no-repeat;background-position:center}
 .top_main_right{text-align:right;float:right;height:30px;padding:0;margin-top:80px;margin-right:0;margin-bottom:0;margin-left:0;color:#FFF}
 .top_main{padding:0;height:110px;width:1000px;margin-right:auto;margin-left:auto}
 .top_main_left{float:left;height:110px;width:480px}
