--- a/src/main/webapp/statics/js/onlineSurvey/css/m/index.css
+++ b/src/main/webapp/statics/js/onlineSurvey/css/m/index.css
@@ -337,12 +337,12 @@
 	width:100%;
 	height:20px;
 	line-height:20px;
-	background-image: url(../images/radio_off.png);
+	background-image: url(../../images/radio_off.png);
     background-repeat: no-repeat;
 	cursor:pointer;
 }
 .input-radio-btn.checked{
-	background-image: url(../images/radio_on.png);
+	background-image: url(../../images/radio_on.png);
 }
 
 .input-checkbox-btn{
@@ -350,10 +350,10 @@
 	width:100%;
 	height:20px;
 	line-height:20px;
-	background-image: url(../images/checkbox_off.png);
+	background-image: url(../../images/checkbox_off.png);
     background-repeat: no-repeat;
 	cursor:pointer;
 }
 .input-checkbox-btn.checked{
-	background-image: url(../images/checkbox_on.png);
+	background-image: url(../../images/checkbox_on.png);
 }
