--- a/src/main/webapp/statics/css/appeditor/registration-page.css
+++ b/src/main/webapp/statics/css/appeditor/registration-page.css
@@ -1118,3 +1118,9 @@ url("chrome://browser/content/history/history-panel.xul")
 .alert-success{background-color:#dff0d8;border-color:#a3d48e;color:#468847}
 .alert-success,.alert-danger,.alert-error,.alert-info{text-shadow:0 1px 0 rgba(255,255,255,0.5)}
 .noteing .alert{padding:8px 20px}
+
+/*表单填写说明css*/
+.form_sm{padding:5px 10px;width:150px;text-align:center;}
+.form_input{width:750px;height:400px;overflow-y:auto;border:1px solid #0070c6;display:none;}
+.readme{width:150px;}
+.tips{margin:0px 4px 0 0;vertical-align:middle;}
