--- a/src/main/webapp/statics/css/cantsinghua/style.css
+++ b/src/main/webapp/statics/css/cantsinghua/style.css
@@ -104,7 +104,7 @@ ul,li{
 	background:transparent;
 	border:none;
 	outline:none;
-	
+	float: left;
 }
 #container_index .main .form .info{
 	position:absolute;
@@ -260,4 +260,12 @@ ul,li{
 	font-size:14px;
 	margin-top:14px;
 	margin-bottom:40px;
+}
+[id$=Tip]{
+	color: #997423;
+	margin-left: 5px;
+}
+.email {
+	color: #FF0000;
+	margin: 5px 0px 0px 10px;
 }
